# PICO2-Interrupt-driven-temperature-sensor-and-screen

./: .gitignore  CMakeLists.txt  README.md  arm-none-eabi-gcc.cmake
docs/: RESOURCES.md
include/: board_led.h  startup.h
src/: board_led.c  main.c  startup.c
